# ud_slurm_addons

./: README.md
commands/: README.md  qhost  qstatgrp  sbatchnd  sjobs  snodeinfo  spreempted  squota  ssheet_driver  ssinfo  sworkgroup  swrap_driver  wsshare  xalloc
helpers/: shm-cleanup.py
job_submit/: CMakeLists.txt  Makefile  README.md  job_submit_udhpc.c
spank/: CMakeLists.txt  Makefile  README.md  gridengine_compat.c
ssh-srun-wrapper/: cgroup_summary  install.sh  ssh
