CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (gridengine_compat C)

#
# For finding packages:
#
INCLUDE(CheckIncludeFiles)
INCLUDE(FindPackageHandleStandardArgs)

IF (NOT SLURM_PREFIX)
  SET (SLURM_PREFIX "/usr/local" CACHE PATH "Directory in which SLURM is installed.")
ENDIF (NOT SLURM_PREFIX)
IF (SLURM_PREFIX)
  LIST(APPEND CMAKE_PREFIX_PATH ${SLURM_PREFIX})
ENDIF (SLURM_PREFIX)

FIND_PATH(SLURM_INCLUDE_DIR NAMES slurm/slurm.h)
FIND_LIBRARY(SLURM_LIBRARY NAMES libslurm.so)
FIND_PACKAGE_HANDLE_STANDARD_ARGS(SLURM DEFAULT_MSG SLURM_LIBRARY SLURM_INCLUDE_DIR)
IF (NOT SLURM_FOUND)
  MESSAGE(FATAL_ERROR "SLURM library could not be found")
ELSE (NOT SLURM_FOUND)
  SET (SLURM_LIBRARIES ${SLURM_LIBRARY})
  SET (SLURM_INCLUDE_DIRS ${SLURM_INCLUDE_DIR})
  FIND_PATH(SLURM_MODULES_DIR NAMES lib/slurm DOC "Directory containing SLURM extensions.")
  IF (NOT SLURM_MODULES_DIR)
    MESSAGE(FATAL_ERROR "SLURM extensions directory could not be found")
  ENDIF (NOT SLURM_MODULES_DIR)
ENDIF (NOT SLURM_FOUND)
MARK_AS_ADVANCED (SLURM_LIBRARIES SLURM_INCLUDE_DIRS)

ADD_LIBRARY (gridengine_compat MODULE gridengine_compat.c)
INCLUDE_DIRECTORIES (BEFORE ${SLURM_INCLUDE_DIRS})
SET_TARGET_PROPERTIES (gridengine_compat PROPERTIES PREFIX "" SUFFIX "" OUTPUT_NAME "gridengine_compat.so")
INSTALL (TARGETS gridengine_compat DESTINATION ${SLURM_MODULES_DIR}/lib/slurm)

